<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource" translatable="false">toketani</string>
    <!--    <string name="app_name">Heritage Food</string>-->
    <string name="currency" translatable="false">Rp</string>
    <string name="emptyCart">NO items in the cart</string>
    <string name="tv_order_rs">Rs.</string>
    <string name="tv_order_qty">Qty</string>
    <string name="cash" translatable="false">Cash On Delivery</string>
    <string name="tv_reg_name_hint">Name</string>
    <string name="date_d" translatable="false">Date:</string>
    <string name="no_rcord_found" translatable="false">No record found</string>
    <string name="emptyCartInfo">Please add some of the items in cart that will appear here</string>
    <string name="orderSuccess">order accepted successfully</string>
    <string name="orderSuccessInfo">Your order accepted successfully. Delivery boy will contact you soon</string>
    <string name="noNet">NO internet connection</string>
    <string name="noNetInfo">Please check your internet connectivity and continue your shopping</string>
    <string name="location">Choose your location</string>
    <string name="locationInfo">Choose your location and start shopping</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cancle_order_note">Are you sure!\nyou want to cancle order ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="order_detail" translatable="false">Order Detail</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="map_api_key">AIzaSyBvTaVufSFg8S4Buq1d0KzYZMDW_qd0L7Q</string>

    <string name="home_second">Home Second</string>
    <string name="status_stop">Powered By <font color="#f7941e">toketani</font></string>
    <string name="nav_terms" translatable="false">Terms &amp; Privacy</string>
    <string name="cart" translatable="false">Cart</string>
    <string name="selected_place_info">Selected location information:\n%1$s</string>

    <string name="nav_home" translatable="false">Shop Now</string>

    <string name="outOfStock" translatable="false">Out of stock</string>
    <string name="nav_chat" translatable="false">Chat With Us</string>
    <string name="nav_user" translatable="false">User</string>
    <string name="nav_order" translatable="false">My Orders</string>
    <string name="nav_profile" translatable="false">My Profile</string>
    <string name="nav_support" translatable="false">Support</string>
    <string name="nav_about" translatable="false">About Us</string>
    <string name="failed" translatable="false">Sorry,Your Payment Has Failed</string>
    <string name="again" translatable="false">Please Try Again</string>
    <string name="retry" translatable="false">Retry Order</string>
    <string name="nav_review" translatable="false">Review Us</string>
    <string name="nav_contact" translatable="false">Contact Us</string>
    <string name="nav_share" translatable="false">Share with Friends</string>
    <string name="nav_logout" translatable="false">Logout</string>
    <string name="btn_continue" translatable="false">Continue</string>
    <string name="btn_Register" translatable="false">Register</string>
    <string name="mapbox_access_token">pk.eyJ1IjoidGVjbWFuaWMiLCJhIjoiY2tkbzk4czBqMGh2czJ4dGEyZHE2emhhcSJ9.z68ISkju1nCXg1kSGavvBg</string>
    <string name="no_internet" translatable="false">Sorry! Not connected to internet</string>

    <!--  <string name="currency" translatable="false">\Rp.</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="txtCredits" translatable="false"><a href="http://www.google.com">Google</a></string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>

    <string name="nav_terms" translatable="false">Terms &amp; Privacy</string>
    <string name="offer" translatable="false">Offer</string>
    <string name="start_time" translatable="false">Start Time :</string>
    <string name="end_time" translatable="false">End Time :</string>
    <string name="wallet" translatable="false">Wallet Used</string>
    <string name="coupon_used" translatable="false">Coupon Used</string>
    <string name="apply" translatable="false">Apply</string>
    &lt;!&ndash; string.xml &ndash;&gt;
    <string name="nav_home" translatable="false">Shop Now</string>
    <string name="nav_chat" translatable="false">Chat With Us</string>
    <string name="nav_user" translatable="false">User</string>
    <string name="nav_order" translatable="false">My Orders</string>
    <string name="nav_profile" translatable="false">My Profile</string>
    <string name="nav_support" translatable="false">Support</string>
    <string name="nav_about" translatable="false">About Us</string>
    <string name="failed" translatable="false">Sorry,Your Payment Has Failed</string>
    <string name="again" translatable="false">Please Try Again</string>
    <string name="retry" translatable="false">Retry Order</string>
    <string name="nav_review" translatable="false">Review Us</string>
    <string name="nav_contact" translatable="false">Contact Us</string>
    <string name="nav_share" translatable="false">Share with Friends</string>
    <string name="nav_logout" translatable="false">Logout</string>
    <string name="btn_continue" translatable="false">Continue</string>
    <string name="btn_Register" translatable="false">Register</string>
    <string name="rewards_points" translatable="false">Rewards Points</string>
    <string name="rech_wallet" translatable="false">Recharge Wallet</string>
    <string name="continue_bt" translatable="false">Continue</string>
    <string name="wall_am" translatable="false">My Wallet Amount</string>-->

    <string name="order_no" translatable="false">Order No.:\u0020</string>
    <string name="pending" translatable="false">Pending</string>
    <string name="confirm" translatable="false">Confirm</string>
    <string name="delivered" translatable="false">Delivered</string>
    <string name="outfordeliverd" translatable="false">Out for Delivered\nReady to pickup</string>
    <string name="cancle" translatable="false">Cancel</string>
    <string name="date">Date:\u0020</string>
    <string name="time">Time:\u0020</string>
    <string name="tv_cart_title">Cart</string>

    <string name="debit" translatable="false">Debit / Credit Card</string>
    <string name="net" translatable="false">Net Banking</string>
    <string name="card" translatable="false">Cards</string>
    <string name="promo" translatable="false">Promo Code</string>
    <string name="tv_cart_clear">Clear All Product</string>
    <string name="tv_cart_checkout">Continue Checkout</string>
    <string name="tv_cart_total">Total:\u0020</string>
    <string name="tv_cart_item">Items:\u0020</string>
    <string name="tv_cart_rs">\u0020Rs</string>
    <string name="coupon" translatable="false">Coupon</string>
    <string name="sure_del" translatable="false">Are you sure!
    you want to delete all cart product</string>
    <string name="tv_del_title">Delivery Date/Time</string>
    <!-- fragment_delivery_time.xml -->
    <string name="tv_del_address">Delivery Address</string>
    <string name="et_del_address_hint">Enter Delivery address..</string>
    <string name="tv_del_continue">Continue With Time</string>
    <string name="tv_del_date">Select delivery date</string>
    <string name="tv_del_time">Select delivery time</string>
    <string name="tv_del_date_time">Delivery Data/Time</string>
    <string name="tv_total_item_amount">Total Items And Amount</string>
    <string name="tv_total_total">Total Amount </string>
    <string name="Category">Category</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_icon">menu icon</string>
    <string name="top_category">Top Category</string>
    <string name="card_number">Card Number</string>

    <string name="dummy_card">0000 0000 0000</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="card_cvv">CVV</string>
    <string name="payment_prompt">Enter your card details to complete the payment</string>
    <string name="make_payment">Make Payment</string>
    <string name="splash_image">splash image</string>
    <string name="my_reward_points">My Reward Points</string>
    <string name="redeem">Redeem</string>
    <string-array name="selectAction">
        <item>Resend OTP</item>
        <item>Enter OTP Manually</item>
    </string-array>


</resources>
